[gd_scene load_steps=2 format=3 uid="uid://bcb51sbfc40ho"]

[ext_resource type="Script" path="res://Menus/in_game_menu.gd" id="1_84myo"]

[node name="InGameMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_84myo")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -76.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="HP" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "HP: ???"

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Score" type="Label" parent="HBoxContainer/MarginContainer2"]
layout_mode = 2
text = "ОЧКИ: ???"

[node name="MarginContainer3" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="HiScore" type="Label" parent="HBoxContainer/MarginContainer3"]
layout_mode = 2
text = "РЕКОРД: ???"

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="ButtonToMenu" type="Button" parent="HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "В МЕНЮ"

[node name="ConfirmationToMenu" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -23.5
offset_right = 20.0
offset_bottom = 23.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ConfirmationToMenu"]
layout_mode = 2
text = "ВЫ УВЕРЕНЫ?"

[node name="ButtonYes" type="Button" parent="ConfirmationToMenu"]
layout_mode = 2
text = "Да"

[node name="ButtonNo" type="Button" parent="ConfirmationToMenu"]
layout_mode = 2
text = "Нет"

[connection signal="pressed" from="HBoxContainer/MarginContainer/ButtonToMenu" to="." method="_on_button_to_menu_pressed"]
[connection signal="pressed" from="ConfirmationToMenu/ButtonYes" to="." method="_on_button_yes_pressed"]
[connection signal="pressed" from="ConfirmationToMenu/ButtonNo" to="." method="_on_button_no_pressed"]
